--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.auto-commit=true
 
 # mapper Setting
-mybatis.type-aliases-package=com.ssafy.*.model
+mybatis.type-aliases-package=com.ssafy.enjoytrip.*.model
 mybatis.mapper-locations=mapper/*.xml
 
 
