--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^4.6.2",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "jquery": "^3.7.0",
+    "popper.js": "^1.16.1",
     "vue": "^2.7.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
