--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -113,6 +113,12 @@
             <version>2.5</version>
         </dependency>
 
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
