--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.6.2",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "emailjs-com": "^3.2.0",
     "jquery": "^3.7.0",
     "jwt-decode": "^3.1.2",
     "popper.js": "^1.16.1",
