--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "swiper": "^9.3.2",
     "vue": "^2.7.14",
     "vue-router": "^3.5.1",
+    "vuedraggable": "^2.24.3",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.1.0"
   },
